--- a/fcmobile.html
+++ b/fcmobile.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <nav class="topnav">
-        <a href="home.html" class="nav-btn">Home</a>
+        <a href="index.html" class="nav-btn">Home</a>
         <a href="efootball.html" class="nav-btn">eFootball</a>
         <a href="fcmobile.html" class="nav-btn active">FC Mobile</a>
         <a href="bloodstrike.html" class="nav-btn">Blood Strike</a>
