--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <nav class="topnav" id="topnav">
-        <button class="nav-btn active"><a href="home.html">Home</a></button>
+        <button class="nav-btn active"><a href="index.html">Home</a></button>
         <button class="nav-btn"><a href="efootball.html">eFootball</a></button>
         <button class="nav-btn"><a href="fcmobile.html">FC Mobile</a></button>
         <button class="nav-btn"><a href="bloodstrike.html">Blood Strike</a></button>
