--- a/data.html
+++ b/data.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <nav class="topnav">
-        <a href="home.html" class="nav-btn">Home</a>
+        <a href="index.html" class="nav-btn">Home</a>
         <a href="efootball.html" class="nav-btn">eFootball</a>
         <a href="fcmobile.html" class="nav-btn">FC Mobile</a>
         <a href="bloodstrike.html" class="nav-btn">Blood Strike</a>
@@ -56,7 +56,7 @@
           </div>
           <div style="margin-top:10px;display:flex;gap:8px;align-items:center">
             <button class="btn" id="buyData">Buy via WhatsApp</button>
-            <a class="btn ghost" href="home.html">Back</a>
+            <a class="btn ghost" href="index.html">Back</a>
           </div>
         </div>
       </section>
